// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractionStats renders nothing if no counter party 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(138,155,161,1.0)",
            "fontFamily": undefined,
            "fontSize": 13,
          },
          Object {
            "color": "rgba(138,155,161,1.0)",
          },
        ]
      }
    >
      You have never 
      shared your details
       with 
      this dApp
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders short address if no name is present 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(138,155,161,1.0)",
            "fontFamily": undefined,
            "fontSize": 13,
          },
          Object {
            "color": "rgba(138,155,161,1.0)",
          },
        ]
      }
    >
      You have never 
      shared your details
       with 
      0x1bc5cbf71b
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders with "2 times" if exactly 2 as stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(138,155,161,1.0)",
            "fontFamily": undefined,
            "fontSize": 13,
          },
          Object {
            "color": "rgba(138,155,161,1.0)",
          },
        ]
      }
    >
      You've 
      shared your details
       with 
      Coinbase
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(138,155,161,1.0)",
              "fontFamily": undefined,
              "fontSize": 13,
            },
            Object {
              "color": "rgba(138,155,161,1.0)",
            },
          ]
        }
      >
         2 times 
      </Text>
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders with "once" if exactly 1 as stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(138,155,161,1.0)",
            "fontFamily": undefined,
            "fontSize": 13,
          },
          Object {
            "color": "rgba(138,155,161,1.0)",
          },
        ]
      }
    >
      You've 
      shared your details
       with 
      Coinbase
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgba(138,155,161,1.0)",
              "fontFamily": undefined,
              "fontSize": 13,
            },
            Object {
              "color": "rgba(138,155,161,1.0)",
            },
          ]
        }
      >
         once 
      </Text>
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders you have never if 0 stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(138,155,161,1.0)",
            "fontFamily": undefined,
            "fontSize": 13,
          },
          Object {
            "color": "rgba(138,155,161,1.0)",
          },
        ]
      }
    >
      You have never 
      shared your details
       with 
      Coinbase
    </Text>
  </View>
</View>
`;

exports[`InteractionStats renders you have never if no stats 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginTop": 16,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgba(138,155,161,1.0)",
            "fontFamily": undefined,
            "fontSize": 13,
          },
          Object {
            "color": "rgba(138,155,161,1.0)",
          },
        ]
      }
    >
      You have never 
      shared your details
       with 
      Coinbase
    </Text>
  </View>
</View>
`;
